CR-2009-01-20-0: Cleanup:    get_binary_path() now is assuming
                             "/bin/sh" path for "sh" binary
                 Review:     DG

DG-2009-01-19-0: Enhancem.:  Added test for IZ 1806. 
                 Review:     CR 

MG-2009-01-19-1: Enhancem:   Test for hedeby issue 568
                 Review:     TB

MG-2009-01-19-0: Enhancem:   Test for hedeby issue 566
                 Review:     TB

HP-2009-01-14-0: Bugfix:     Added several error checks
                 Review:     MD

AP-2009-01-13-0: Enhancem.:  Added test for issue 2682
                 Bugfix:     o source_cvs_release configuration fix
                             o adjusting test template
                 Review:     JG

CR-2009-01-12-0: Bugfix:     o ge_has_feature():
                               - "job_submission_verify" renamed to
                                 to "job-submission-verify"
                               - new feature name "job-consumable"
                             o fixed resource_reservation test for
                               61_BRANCH
                             o added testsuite "COMMLIB" category
                 Review:     RD

RD-2009-01-12-0: Enhancem.:  Added test for scheduler message check
                 Review:     CR

JG-2009-01-12-0: Bugfix:     Fixed installation with windows hosts.
                 Review:     DG

EB-2009-01-09-0: Bugfix:     - enabled enforce limit tests again
                             - added some jsv/qalter related tests
                             - changed the way how TS handles vi (caused
									    problem with special vim plugins)
                 Review:     CR

MP-2009-01-07-0: Enhancem.:  added check for IZ 2752. qconf -Aconf should not
                             be able to modify an existing configuration
                 Review:     AP

JG-2008-01-05-1: Enhancem.:  o additional check for error logging in
                               tight_integration test